--- a/style.css
+++ b/style.css
@@ -1,6 +1,31 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 h1{
     font-size: 30px;
 }
+.mid{
+    color: chocolate;
+}
+section{
+    display: flex;
+}
+.fid{
+    width: 50%;
+    padding-left: 2%;
+}
+.fid img{
+    width: 100%;
+}
+.gid{
+    text-decoration: none;
+    background-color: orange;
+    padding: 3px 10px;
+    border-radius: 5px;
+    color:black;
+    font-weight: 700;
+    }
+    .kid{
+        background-image: url(https://images.pexels.com/photos/6070351/pexels-photo-6070351.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+    }
